Fix for scrollbars on Safari

--- a/src/sass/_components/_site-nav.scss
+++ b/src/sass/_components/_site-nav.scss
@@ -14,6 +14,8 @@
 	overflow-y: auto;
 	-webkit-overflow-scrolling: touch;
 
+	transform: translate3d( 0, -100%, 0 );
+
 	transition: opacity 0.25s ease-in-out;
 
 
